# sigmashake-sdk-python

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  test-local.sh
.gemini/.gemini/: agent-locks.json
.gemini/handoffs/: 06a60fb9-20260315-185035.md  3bdf32c6-20260315-185027.md
.gemini/skills/publish/: SKILL.md
docs/: api.rst  conf.py  index.rst
scripts/: validate_models.py
shared/coordination/workstreams/: ws-005.md
src/sigmashake/: __init__.py  accounts.py  agents.py  auth.py  claude.py  client.py  db.py  exceptions.py  fleet.py  gateway.py  memory.py  models.py  pulse.py  shield.py  soc.py
tests/: conftest.py  test_accounts.py  test_agents.py  test_auth.py  test_claude.py  test_client.py  test_db.py  test_fleet.py  test_gateway.py  test_gateway_wrap.py  test_identity.py  test_memory.py  test_models.py  test_pulse.py  test_shield.py  test_soc.py
