[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigmashake"
version = "0.1.0"
description = "Python SDK for the SigmaShake platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "SigmaShake Inc", email = "engineering@sigmashake.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://github.com/sigmashakeinc/sigmashake-sdk-python"
Documentation = "https://docs.sigmashake.com/sdk/python"
Repository = "https://github.com/sigmashakeinc/sigmashake-sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/sigmashake"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
